added correct paths to images

--- a/iphone.html
+++ b/iphone.html
@@ -19,7 +19,7 @@
             <a class="single-cta-link" href="https://www.apple.com/us/shop/goto/buy_iphone/iphone_14_pro">Buy ></a>
         </div>
         <div class="hero-section-image-container">
-            <img src="C:\Users\dailyninja\Desktop\praveenHaloweave\firstProject\images\iphoneBannerCropped.jpg" />
+            <img src="images/iphoneBannerCropped.jpg" />
         </div>
     </div>
     <div class="airpods-iwatch-container">
@@ -32,7 +32,7 @@
                 <a class="single-cta-link" href="https://www.apple.com/us/shop/goto/product/MQD83" target="_self">Buy ></a>
             </div>
             <div class="product-section-image-container">
-                <img src="C:\Users\dailyninja\Desktop\praveenHaloweave\firstProject\images\airpods_proCropped.jpg" />  
+                <img src="images/airpods_proCropped.jpg" />  
             </div>
         </div>
         <div class="product-container">
@@ -44,7 +44,7 @@
                 <a class="single-cta-link" href="https://www.apple.com/us/shop/goto/product/MQD83" target="_self">Buy ></a>
             </div>
             <div class="product-section-image-container">
-                <img src="C:\Users\dailyninja\Desktop\praveenHaloweave\firstProject\images\airpods_proCropped.jpg" />  
+                <img src="images/airpods_proCropped.jpg" />  
             </div>
         </div>
     </div>
